Closed Bug 118618 Opened 23 years ago Closed 23 years ago

Non-latin1 display name is dropped after Export/Import

Categories

(MailNews Core :: Internationalization, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.8

People

(Reporter: marina, Assigned: nhottanscp)

Details

Attachments

(1 file)

*** observed with 2002-01-07 build *** Steps to reproduce: -Select your PAB or CA ( or any AB where there are non-latin1 entries); -Import/Export this AB; -now select the imported AB and note that the non-latin1 (cyrillic,japanese,chinese) Display names are missing, you can see only their email addresses
cc'ing Seth
same is true for .txt and .tab format
>-Import/Export this AB; Does this mean import first then export? When does the problem happen, after import?
no, i meant to save it first ( export) and then import into AB. Actually the loss happens already on the Export stage, if i would open the exported AB (or CA) in Notepad i would see the non-latin1 display names as commas ",,,,," or just as space in Excel. So when those entries are imported they Display names certainly are showing up as blank.
Summary: Non-latin1 display name is dropped after Import/Export → Non-latin1 display name is dropped after Export/Import
Is this a new problem or you can see it on older Netscape releases?
Status: NEW → ASSIGNED
well, the Export feature is new, it just was introduced. the Import was present in 6.2. If i would use 6.2 rtm i would still see the imported AB ( from 6.2.1.+) with missing non-latin1 display name but i think that the saving (exporting) is not working correctly, i don't think it is an import problem.
What format did you use for the export, ldif?
it doesn't work in .ldif format yet, Seth made it available only in .csv, .tab and .txt format. I used all three when testing.
For those format, I think it should be in a system charset. It should be UTF-8 for ldif. Reassign to putterman.
Marina, when you tested cyrillic,japanese,chinese, did you used localized Windows?
no, i didn't.I know that the text format like csv and tab would be system dependant but how would we handle multilingual PAB and CA in that case? My PAB has entries in almost all languages.
LDIF uses UTF-8 so it can supports multiple languages.
would the display name shows up garbled in csv and tab then it would be maybe less confusing as just a blank display..?
We usually put '?' for characters not converted to the target charset. Let me make the change.
Comment on attachment 64042 [details] [diff] [review] Set output behavior for unicode encoder to prevent the convesion to be aborted. r=naving. Can you test migrating filters with non-ascii filter name and folder name (4.x to 6.x), thanks.
Attachment #64042 - Flags: review+
I tested this for export address book to .txt. I don't think this is used for migration which needs conversion to unicode but not from unicode. My change is for converting from unicode.
Target Milestone: --- → mozilla0.9.8
Comment on attachment 64042 [details] [diff] [review] Set output behavior for unicode encoder to prevent the convesion to be aborted. sr=sspitzer
Attachment #64042 - Flags: superreview+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
QA Contact: ji → marina
it is working correctly now: on Latin1 OS the imported/exported non-latin entries re displayed as ?????. In ldif format all entries after Import/Export are showing up correctly
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: