Set output behavior for unicode encoder to prevent the convesion to be aborted, bug 118618, r=naving, sr=sspitzer.